--- a/UserService/UserService.Core/UserService.Core.csproj
+++ b/UserService/UserService.Core/UserService.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.9" />
     <PackageReference Include="MediatR" Version="8.0.1" />
   </ItemGroup>
 
