--- a/UserService/UserService.Repo/UserService.Repo.csproj
+++ b/UserService/UserService.Repo/UserService.Repo.csproj
@@ -6,12 +6,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="9.0.0" />
+		<PackageReference Include="HelpMyStreet.Utils" Version="1.1.9" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Core\UserService.Core.csproj">
-			<Name >UserService.Core</Name>
+			<Name>UserService.Core</Name>
 		</ProjectReference>
 	</ItemGroup>
 </Project>
