--- a/UserService/UserService.Core/UserService.Core.csproj
+++ b/UserService/UserService.Core/UserService.Core.csproj
@@ -5,8 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.36" />
+    <PackageReference Include="HelpMyStreet.Contracts" Version="1.1.37" />
+    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.37" />
     <PackageReference Include="MediatR" Version="8.0.1" />
+    <PackageReference Include="Utf8Json" Version="1.3.7" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
