--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -5,12 +5,13 @@
   "Apis": {
     "AddressService": {
       "BaseAddress": "http://localhost:7072",
+      //"BaseAddress": "https://helpmystreet-address-service-dev.azurewebsites.net",
       "Timeout": "00:00:30",
-      "MaxConnectionsPerServer": 500,
+      "MaxConnectionsPerServer": null, // default is int.MaxValue
       "Headers": { "Accept": "application/json" }
     }
   },
   "ApplicationConfig": {
-    "GetHelpersByPostcodeBatchSize" : 25000
+    "GetHelpersByPostcodeBatchSize" : 20000
   }
 }
