--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -5,9 +5,8 @@
   "Apis": {
     "AddressService": {
       "BaseAddress": "http://localhost:7072",
-      //"BaseAddress": "https://helpmystreet-address-service-dev.azurewebsites.net",
       "Timeout": "00:00:30",
-      "MaxConnectionsPerServer": null, // default is int.MaxValue
+      "MaxConnectionsPerServer": null,
       "Headers": { "Accept": "application/json" }
     }
   },
