--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -4,7 +4,7 @@
   },
   "Apis": {
     "AddressService": {
-      "BaseAddress": "http://localhost:7072",
+      "BaseAddress": "http://helpmystreet-address-service-dev.azurewebsites.net",
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
       "Headers": { "Accept": "application/json" }
