--- a/UserService/UserService.Core/UserService.Core.csproj
+++ b/UserService/UserService.Core/UserService.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="HelpMyStreet.Contracts" Version="1.1.40" />
     <PackageReference Include="HelpMyStreet.Utils" Version="1.1.40" />
     <PackageReference Include="MediatR" Version="8.0.1" />
+    <PackageReference Include="Polly.Caching.Memory" Version="3.0.2" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
   </ItemGroup>
