check in appsettings.json as a property name has changed

--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -4,13 +4,13 @@
   },
   "Apis": {
     "AddressService": {
-      "BaseAddress": "http://helpmystreet-address-service-dev.azurewebsites.net",
+      "BaseAddress": "http://localhost:7072",
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
       "Headers": { "Accept": "application/json" }
     }
   },
   "ApplicationConfig": {
-    "GetHelpersByPostcodeBatchSize" : 20000
+    "GetVolunteersForCacheBatchSize": 20000
   }
 }
