--- a/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
+++ b/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
@@ -15,6 +15,7 @@
 		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="NewRelic.Agent" Version="8.26.630" />
+    <PackageReference Include="NewRelic.Agent.Api" Version="8.26.630" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Handlers\UserService.Handlers.csproj">
