--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Data Source=127.0.0.1;Initial Catalog=UserService;Integrated Security=True;MultipleActiveResultSets=True;MultiSubnetFailover=True;"
+    "SqlConnectionString": "Server=tcp:helpmystreet-dev.database.windows.net,1433;Initial Catalog=user-service;Persist Security Info=False;User ID=hmsdevdbadmin;Password=HIKIMLSY68H98wy#Nz!J;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=120;"
   },
   "Apis": {
     "AddressService": {
