--- a/UserService/UserService.Handlers/UserService.Handlers.csproj
+++ b/UserService/UserService.Handlers/UserService.Handlers.csproj
@@ -5,13 +5,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="HelpMyStreet.Utils" Version="1.1.68" />
 		<PackageReference Include="MediatR" Version="8.0.1" />
 		<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
 		<PackageReference Include="NewRelic.Agent.Api" Version="8.26.630" />
 	</ItemGroup>
+
 	<ItemGroup>
-		<ProjectReference ReplaceParameters="true" Include="..\UserService.Core\UserService.Core.csproj">
-			<Name>UserService.Core</Name>
-		</ProjectReference>
+	  <ProjectReference Include="..\UserService.Core\UserService.Core.csproj" />
 	</ItemGroup>
 </Project>
