Add HttpClient retry policy

--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -5,6 +5,7 @@
   "Apis": {
     "AddressService": {
       "BaseAddress": "http://localhost:7072",
+      "IsExternal": false,
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
       "Headers": { "Accept": "application/json" }
