--- a/UserService/UserService.Repo/UserService.Repo.csproj
+++ b/UserService/UserService.Repo/UserService.Repo.csproj
@@ -1,19 +1,26 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFramework>netstandard2.0</TargetFramework>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<PackageReference Include="AutoMapper" Version="9.0.0" />
-		<PackageReference Include="Dapper" Version="2.0.35" />
-		<PackageReference Include="HelpMyStreet.Utils" Version="1.1.80" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference ReplaceParameters="true" Include="..\UserService.Core\UserService.Core.csproj">
-			<Name>UserService.Core</Name>
-		</ProjectReference>
-	</ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
+    <PackageReference Include="Dapper" Version="2.0.35" />
+    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.80" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference ReplaceParameters="true" Include="..\UserService.Core\UserService.Core.csproj">
+      <Name>UserService.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
