--- a/UserService/UserService.Repo/UserService.Repo.csproj
+++ b/UserService/UserService.Repo/UserService.Repo.csproj
@@ -7,7 +7,8 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.80" />
+    <PackageReference Include="HelpMyStreet.PostcodeCoordinates.EF" Version="1.1.113" />
+    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.113" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
