Get data from new cache.  Add Timed trigger to refresh cache because getting data in the background on a new thread using IServiceScopeFactory throws an exception in Azure Functions (I've raised an issue for this).

--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "SqlConnectionString": "Data Source=127.0.0.1;Initial Catalog=UserService;Integrated Security=True;MultipleActiveResultSets=True;MultiSubnetFailover=True;"
   },
+  "RedisConfig": {
+    "AppName": "UserService",
+    "ConnectionString": "connection string should go here"
+  },
   "Apis": {
     "AddressService": {
       "BaseAddress": "http://localhost:7072",
