Don't run cache refresher on startup

--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -8,7 +8,7 @@
   },
   "Apis": {
     "AddressService": {
-      "BaseAddress": "http://localhost:7072",
+      "BaseAddress": "https://helpmystreet-address-service-next-major-release.azurewebsites.net",
       "IsExternal": false,
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
