--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=tcp:helpmystreet-next-major-release.database.windows.net,1433;MultiSubnetFailover=True;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
+    "SqlConnectionString": "Server=tcp:helpmystreet-sql1-dev.database.windows.net,1433;MultiSubnetFailover=True;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
   },
   "RedisConfig": {
     "AppName": "UserService",
@@ -9,6 +9,13 @@
   "Apis": {
     "AddressService": {
       "BaseAddress": "https://helpmystreet-address-service-next-major-release.azurewebsites.net",
+      "IsExternal": false,
+      "Timeout": "00:00:30",
+      "MaxConnectionsPerServer": null,
+      "Headers": { "Accept": "application/json" }
+    },
+    "CommunicationService": {
+      "BaseAddress": "https://helpmystreet-communication-service-next-major-release.azurewebsites.net",
       "IsExternal": false,
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
