--- a/UserService/UserService.Core/UserService.Core.csproj
+++ b/UserService/UserService.Core/UserService.Core.csproj
@@ -5,16 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HelpMyStreet.Cache" Version="1.1.248" />
-    <PackageReference Include="HelpMyStreet.Contracts" Version="1.1.248" />
+    <PackageReference Include="HelpMyStreet.Cache" Version="1.1.288" />
+    <PackageReference Include="HelpMyStreet.Contracts" Version="1.1.288" />
     <PackageReference Include="Enums.NET" Version="3.0.3" />
-    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.248" />
+    <PackageReference Include="HelpMyStreet.Utils" Version="1.1.288" />
     <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="Polly.Caching.Memory" Version="3.0.2" />
     <PackageReference Include="Polly.Contrib.DuplicateRequestCollapser" Version="0.2.0" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
+	<PackageReference Include="FirebaseAdmin" Version="1.9.2" />
   </ItemGroup>
 
   <ItemGroup>
