--- a/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
+++ b/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
@@ -1,21 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-		<AzureFunctionsVersion>v2</AzureFunctionsVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+		<AzureFunctionsVersion>v3</AzureFunctionsVersion>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="AzureFunctions.Extensions.Swashbuckle" Version="1.4.4" />
-		<PackageReference Include="HelpMyStreet.Cache" Version="1.1.316" />
-		<PackageReference Include="HelpMyStreet.Contracts" Version="1.1.316" />
-		<PackageReference Include="HelpMyStreet.Utils" Version="1.1.316" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Cache" Version="1.1.331" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.331" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.331" />
 		<PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
-		<PackageReference Include="MediatR" Version="8.0.1" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.2.0" />
-		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+		<PackageReference Include="MediatR" Version="8.1.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.7" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.7" />
+		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.7" />
+		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.7" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Handlers\UserService.Handlers.csproj">
