--- a/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
+++ b/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
@@ -16,6 +16,8 @@
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="2.2.0" />
 		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="1.0.28" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
+    <PackageReference Include="NewRelic.Agent" Version="8.31.0" />
+    <PackageReference Include="NewRelic.Agent.Api" Version="8.31.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Handlers\UserService.Handlers.csproj">
