--- a/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
+++ b/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
@@ -15,6 +15,8 @@
 		<PackageReference Include="Microsoft.Extensions.Http.Polly" Version="3.1.7" />
 		<PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.9" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.7" />
+    <PackageReference Include="NewRelic.Agent" Version="8.31.0" />
+    <PackageReference Include="NewRelic.Agent.Api" Version="8.31.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Handlers\UserService.Handlers.csproj">
