--- a/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
+++ b/UserService/UserService.AzureFunction/UserService.AzureFunction.csproj
@@ -4,9 +4,10 @@
 		<AzureFunctionsVersion>v3</AzureFunctionsVersion>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="HelpMyStreet.CoreV3.Cache" Version="1.1.331" />
-		<PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.331" />
-		<PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.331" />
+		<PackageReference Include="AzureExtensions.Swashbuckle" Version="3.2.2" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Cache" Version="1.1.378" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.378" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.378" />
 		<PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
 		<PackageReference Include="MediatR" Version="8.1.0" />
