add other activities

--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=tcp:helpmystreet-sql1-dev.database.windows.net,1433;MultiSubnetFailover=True;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
+    "SqlConnectionString": "Server=tcp:helpmystreet-sql1-nmr.database.windows.net,1433;MultiSubnetFailover=True;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
   },
   "RedisConfig": {
-    "AppName": "UserService",
-    "ConnectionString": "connection string should go here"
+    "AppName": "user-service",
+    "ConnectionString": "helpmystreet-next-major-release.redis.cache.windows.net:6380,password=PHOhmPnzjk2PhBkGJPVpTQvqZXqHjDXM2gHOaaYqwuQ=,ssl=True,abortConnect=False"
   },
   "Apis": {
     "AddressService": {
@@ -12,14 +12,30 @@
       "IsExternal": false,
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
-      "Headers": { "Accept": "application/json" }
+      "Headers": {
+        "Accept": "application/json",
+        "x-functions-key": ""
+      }
     },
     "CommunicationService": {
       "BaseAddress": "https://helpmystreet-communication-service-next-major-release.azurewebsites.net",
       "IsExternal": false,
       "Timeout": "00:00:30",
       "MaxConnectionsPerServer": null,
-      "Headers": { "Accept": "application/json" }
+      "Headers": {
+        "Accept": "application/json",
+        "x-functions-key": ""
+      }
+    },
+    "GroupService": {
+      "BaseAddress": "https://helpmystreet-group-service-next-major-release.azurewebsites.net",
+      "IsExternal": false,
+      "Timeout": "00:00:30",
+      "MaxConnectionsPerServer": null,
+      "Headers": {
+        "Accept": "application/json",
+        "x-functions-key": ""
+      }
     }
   },
   "ApplicationConfig": {
