--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -3,8 +3,8 @@
     "SqlConnectionString": "Server=tcp:helpmystreet-sql1-nmr.database.windows.net,1433;MultiSubnetFailover=True;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
   },
   "RedisConfig": {
-    "AppName": "user-service",
-    "ConnectionString": "helpmystreet-next-major-release.redis.cache.windows.net:6380,password=PHOhmPnzjk2PhBkGJPVpTQvqZXqHjDXM2gHOaaYqwuQ=,ssl=True,abortConnect=False"
+    "AppName": "UserService",
+    "ConnectionString": "connection string should go here"
   },
   "Apis": {
     "AddressService": {
@@ -14,7 +14,7 @@
       "MaxConnectionsPerServer": null,
       "Headers": {
         "Accept": "application/json",
-        "x-functions-key": ""
+        "x-functions-key": "ID47W7SSukcp7otbFod0j6qmXbyZxgExnMwzq1hOcVZVyiTgLt4gOQ=="
       }
     },
     "CommunicationService": {
@@ -24,7 +24,7 @@
       "MaxConnectionsPerServer": null,
       "Headers": {
         "Accept": "application/json",
-        "x-functions-key": ""
+        "x-functions-key": "0mqzUAUtpj8FCdS/BkbFEQfAPbmPN0B8sUrhltph59Jl5JBFk0GQNg=="
       }
     },
     "GroupService": {
@@ -34,7 +34,7 @@
       "MaxConnectionsPerServer": null,
       "Headers": {
         "Accept": "application/json",
-        "x-functions-key": ""
+        "x-functions-key": "Asr2qXgBLSrhhXG7mmHmVOqmNE3UwxVsidF98r5MHYzCca/ttQaFDA=="
       }
     }
   },
