--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -14,7 +14,7 @@
       "MaxConnectionsPerServer": null,
       "Headers": {
         "Accept": "application/json",
-        "x-functions-key": "ID47W7SSukcp7otbFod0j6qmXbyZxgExnMwzq1hOcVZVyiTgLt4gOQ=="
+        "x-functions-key": ""
       }
     },
     "CommunicationService": {
@@ -24,7 +24,7 @@
       "MaxConnectionsPerServer": null,
       "Headers": {
         "Accept": "application/json",
-        "x-functions-key": "0mqzUAUtpj8FCdS/BkbFEQfAPbmPN0B8sUrhltph59Jl5JBFk0GQNg=="
+        "x-functions-key": ""
       }
     },
     "GroupService": {
@@ -34,7 +34,7 @@
       "MaxConnectionsPerServer": null,
       "Headers": {
         "Accept": "application/json",
-        "x-functions-key": "Asr2qXgBLSrhhXG7mmHmVOqmNE3UwxVsidF98r5MHYzCca/ttQaFDA=="
+        "x-functions-key": ""
       }
     }
   },
