--- a/UserService/UserService.Core/UserService.Core.csproj
+++ b/UserService/UserService.Core/UserService.Core.csproj
@@ -8,6 +8,7 @@
 	  <PackageReference Include="HelpMyStreet.CoreV3.Cache" Version="1.1.692" />
 	  <PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.692" />
 	  <PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.692" />
+	  <PackageReference Include="Marvin.StreamExtensions" Version="1.2.0" />
     <PackageReference Include="Enums.NET" Version="3.0.3" />
     <PackageReference Include="MediatR" Version="8.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
