--- a/UserService/UserService.Core/UserService.Core.csproj
+++ b/UserService/UserService.Core/UserService.Core.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	 <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="HelpMyStreet.CoreV3.Cache" Version="1.1.912" />
-	  <PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.912" />
-	  <PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.912" />
+	  <PackageReference Include="HelpMyStreet.CoreV3.Cache" Version="1.1.942" />
+	  <PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.942" />
+	  <PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.942" />
 	  <PackageReference Include="Marvin.StreamExtensions" Version="1.2.0" />
-    <PackageReference Include="Enums.NET" Version="3.0.3" />
-    <PackageReference Include="MediatR" Version="8.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Enums.NET" Version="4.0.0" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Polly.Caching.Memory" Version="3.0.2" />
     <PackageReference Include="Polly.Contrib.DuplicateRequestCollapser" Version="0.2.1" />
     <PackageReference Include="Utf8Json" Version="1.3.7" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.9" />
-	<PackageReference Include="FirebaseAdmin" Version="1.15.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+	<PackageReference Include="FirebaseAdmin" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
