--- a/UserService/UserService.Repo/UserService.Repo.csproj
+++ b/UserService/UserService.Repo/UserService.Repo.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Core\UserService.Core.csproj">
@@ -9,21 +9,25 @@
 		</ProjectReference>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.0" />
-		<PackageReference Include="AutoMapper" Version="10.0.0" />
-	        <PackageReference Include="Dapper" Version="2.0.35" />
-		<PackageReference Include="HelpMyStreet.CoreV3.PostcodeCoordinates.EF" Version="1.1.912" />
-		<PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.912" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
+		<PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.6.2" />
+		<PackageReference Include="AutoMapper" Version="11.0.1" />
+	        <PackageReference Include="Dapper" Version="2.0.123" />
+		<PackageReference Include="HelpMyStreet.CoreV3.PostcodeCoordinates.EF" Version="1.1.942" />
+		<PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.942" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.4" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.4">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.3" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.9" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.9" />
+		<PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference ReplaceParameters="true" Include="..\UserService.Core\UserService.Core.csproj">
