--- a/UserService/UserService.UnitTests/UserService.UnitTests.csproj
+++ b/UserService/UserService.UnitTests/UserService.UnitTests.csproj
@@ -1,18 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-
+	<TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
-	  <PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.912" />
-	  <PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.912" />
-    <PackageReference Include="Moq" Version="4.14.7" />
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+	  <PackageReference Include="HelpMyStreet.CoreV3.Contracts" Version="1.1.942" />
+	  <PackageReference Include="HelpMyStreet.CoreV3.Utils" Version="1.1.942" />
+    <PackageReference Include="Moq" Version="4.17.2" />
+    <PackageReference Include="nunit" Version="3.13.3" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
   </ItemGroup>
 
   <ItemGroup>
