Add missing support activities

--- a/UserService/UserService.AzureFunction/appsettings.json
+++ b/UserService/UserService.AzureFunction/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConnectionString": "Server=tcp:helpmystreet-sql1-nmr.database.windows.net,1433;MultiSubnetFailover=True;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
+    "SqlConnectionString": "Server=tcp:helpmystreet-sql3-uat.database.windows.net,1433;Initial Catalog=user-service;Connection Timeout=120;ConnectRetryCount=10;ConnectRetryInterval=2;"
   },
   "RedisConfig": {
     "AppName": "UserService",
